name:                ernesto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ernesto#readme
license:             BSD3
license-file:        LICENSE
author:              Guegant Jean
maintainer:          example@example.com
copyright:           2017 Guegant Jean
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ernesto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , text
                     , process
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Jiwan/ernesto
